# product-attribute

./: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .travis.yml  .travis.yml.rej  README.md  README.rst  __openerp__.py  oca_dependencies.txt  pandoc-3.3-1-amd64.deb  requirements.txt  test-requirements.txt
base_custom_attributes/: .travis.yml  LICENSE  README.rst  __init__.py  __openerp__.py  custom_attributes.py  custom_attributes_view.xml  ir_model.py
base_custom_info/: README.rst  __openerp__.py
base_multi_image/: README.rst
base_product_mass_addition/: README.rst  __manifest__.py
base_product_related_field_filter/: __manifest__.py
base_uom_converter/: README.rst  __manifest__.py
customer_context_in_product_view/: README.rst  __openerp__.py  partner_pricelist.py
customer_pricing_in_product_view/: README.rst  __init__.py  __manifest__.py  __openerp__.py
delivery_translatable/: README.rst  __manifest__.py
endpoint_product_catalog/: README.rst  __manifest__.py
i18n/: es.po  fr.po  product_attributes_extension.pot  product_variant_default_code.pot  pt_BR.po  sl.po
l10n_eu_product_adr/: __manifest__.py
l10n_eu_product_adr_report/: README.rst  __manifest__.py
models/: __init__.py  procurement.py  product.py
multi_image_base/: README.rst  __init__.py  __openerp__.py
nutritional_info/: README.rst  __manifest__.py
nutritional_info_stock_lot/: README.rst  __manifest__.py
packaging_uom/: README.rst  __manifest__.py
partner_custom_attributes/: __openerp__.py  partner.py
partner_product_price/: __manifest__.py
pos_product_cost_security/: README.rst  __manifest__.py
pricelist_configurator_by_bom/: __init__.py  __openerp__.py  pricelist_configurator_by_bom.py  pricelist_configurator_by_bom_view.xml
pricelist_item_generator/: README.rst  __openerp__.py
pricelist_per_product/: README.rst  __init__.py  __manifest__.py  __openerp__.py  install_view.xml  pricelist.py  pricelist_view.xml  product.py  product_view.xml
pricelist_percent_change_supplierinfo/: README.rst  __init__.py  __manifest__.py
product_abc_classification/: README.rst  __manifest__.py
product_abc_classification_base/: README.rst  __manifest__.py
product_abc_classification_sale/: README.rst  __manifest__.py
product_abc_classification_sale_stock/: README.rst  __manifest__.py
product_access_right/: __manifest__.py
product_active_propagate/: README.rst  __manifest__.py
product_allowed_list/: README.rst  __manifest__.py
product_allowed_list_date/: __manifest__.py
product_analytic_account/: README.rst  __init__.py  __openerp__.py  account_invoice.py  product.py  product_view.xml
product_application/: __manifest__.py
product_application_custom_info/: __manifest__.py
product_application_custom_info_search/: __init__.py  __manifest__.py
product_assortment/: README.rst  __manifest__.py  __openerp__.py
product_brand/: README.rst  (+5 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+5667 files in other folders)
