[project]
name = "odoo-addons-oca-product-attribute"
version = "17.0.20240523.0"
dependencies = [
    "odoo-addon-product_dimension>=17.0dev,<17.1dev",
    "odoo-addon-product_sequence>=17.0dev,<17.1dev",
    "odoo-addon-product_set>=17.0dev,<17.1dev",
    "odoo-addon-product_state>=17.0dev,<17.1dev",
    "odoo-addon-product_status>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_archive>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_for_customer>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
