[project]
name = "odoo-addons-oca-product-attribute"
version = "17.0.20240729.1"
dependencies = [
    "odoo-addon-product_code_unique>=17.0dev,<17.1dev",
    "odoo-addon-product_dimension>=17.0dev,<17.1dev",
    "odoo-addon-product_logistics_uom>=17.0dev,<17.1dev",
    "odoo-addon-product_pricelist_supplierinfo>=17.0dev,<17.1dev",
    "odoo-addon-product_secondary_unit>=17.0dev,<17.1dev",
    "odoo-addon-product_sequence>=17.0dev,<17.1dev",
    "odoo-addon-product_set>=17.0dev,<17.1dev",
    "odoo-addon-product_state>=17.0dev,<17.1dev",
    "odoo-addon-product_status>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_archive>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_for_customer>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_revision>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
