[project]
name = "odoo-addons-oca-product-attribute"
version = "17.0.20240911.0"
dependencies = [
    "odoo-addon-product_code_mandatory>=17.0dev,<17.1dev",
    "odoo-addon-product_code_unique>=17.0dev,<17.1dev",
    "odoo-addon-product_dimension>=17.0dev,<17.1dev",
    "odoo-addon-product_logistics_uom>=17.0dev,<17.1dev",
    "odoo-addon-product_packaging_dimension>=17.0dev,<17.1dev",
    "odoo-addon-product_pricelist_revision>=17.0dev,<17.1dev",
    "odoo-addon-product_pricelist_supplierinfo>=17.0dev,<17.1dev",
    "odoo-addon-product_print_category>=17.0dev,<17.1dev",
    "odoo-addon-product_secondary_unit>=17.0dev,<17.1dev",
    "odoo-addon-product_sequence>=17.0dev,<17.1dev",
    "odoo-addon-product_set>=17.0dev,<17.1dev",
    "odoo-addon-product_state>=17.0dev,<17.1dev",
    "odoo-addon-product_status>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_archive>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_for_customer>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_revision>=17.0dev,<17.1dev",
    "odoo-addon-sale_product_template_tags>=17.0dev,<17.1dev",
    "odoo-addon-uom_category_active>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
